--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.1
+  camera: ^0.11.2
+  geolocator: ^14.0.2
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
