--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,8 +1,10 @@
 flutter_native_splash:
-  color: "#1E88E5"                 # Background color
-  image: assets/images/road.jpg   # Splash image
+  color: "#ffffff"                 # Background color
+  image: assets/images/road.png   # Splash image
   android: true
+  android_gravity: center
   android_12:
-    image: assets/images/road.jpg
+    image: assets/images/road.png
     color: "#ffffff"
-    color_dark: "#042a49"   
+    color_dark: "#ffffff"
+    android_gravity: center
