--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   camera: ^0.11.2
   geolocator: ^14.0.2
   path_provider: ^2.1.5
+  google_maps_flutter: ^2.3.1
+  flutter_dotenv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
