--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider: ^2.1.5
   google_maps_flutter: ^2.3.1
   flutter_dotenv: ^6.0.0
+  location: ^6.0.2
 
 dev_dependencies:
   flutter_test:
