--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   google_maps_flutter: ^2.3.1
   flutter_dotenv: ^6.0.0
   location: ^6.0.2
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
